--- a/KANBAN/package.json
+++ b/KANBAN/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.8.2",
+    "regex": "^6.0.1",
     "sass": "^1.90.0",
     "zod": "^4.1.5"
   },
